# news-client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
examples/: basic_usage.py
src/currents_news_client/: __init__.py  api.py  client.py  exceptions.py  models.py  types.py
tests/: __init__.py  conftest.py  test_client.py  test_models.py
tests/fixtures/: sample_responses.json
